Tweak navigation and make sure icons align better in action elements

--- a/assets/booktower.css
+++ b/assets/booktower.css
@@ -418,6 +418,12 @@ body {
   --bs-pagination-disabled-border-color: var(--bt-gray-150);
 }
 
+.nav {
+  --bs-nav-link-color: var(--bt-blue-800);
+  --bs-nav-link-hover-color: var(--bt-blue-700);
+  --bs-nav-padding-x: var(--bt-sp-1) !important;
+}
+
 /* ═══════════════════════════════════════════════════════════════════════════════
    BASE RESET
    ═══════════════════════════════════════════════════════════════════════════════ */
@@ -994,6 +1000,10 @@ code, kbd, pre, samp {
   pointer-events: none;
   cursor: not-allowed;
   filter: saturate(0.4);
+}
+
+.btn i {
+  transform: translateY(0.03em);
 }
 
 /* ── Variants ───────────────────────────────────────────────────────────────── */
@@ -2306,8 +2316,9 @@ img.bt-navbar__logo {
   --u-main-head-pad-y: var(--bt-sp-6);
   --u-main-pad-x: var(--bt-sp-12);
   --u-main-pad-y: var(--bt-sp-8);
-  --u-nav-sidebar-width: 14rem;
-  --u-nav-sidebar-width-slim: 3.5rem;
+  --u-nav-sidebar-width: 13rem;
+  --u-nav-sidebar-width-slim: 3rem;
+  --u-nav-sidebar-pad-x: var(--bt-sp-6);
   --u-main-panel-width: 21rem;
   --u-main-split-sidebar-width: 15.625rem;
   display: grid;
@@ -2389,7 +2400,7 @@ img.bt-navbar__logo {
   grid-column: 1;
   overflow-y: auto;
   min-height: 0;
-  padding: var(--u-main-pad-y) var(--u-main-pad-x);
+  padding: var(--u-main-pad-y) var(--u-nav-sidebar-pad-x);
 }
 
 .u-main__sidebar--border-right {
@@ -2454,10 +2465,47 @@ img.bt-navbar__logo {
   border-right: var(--bt-border);
 }
 
+.bt-sidebar--flush {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.bt-sidebar__toggle {
+  text-align: right;
+  margin-right: var(--bt-sp-2);
+  margin-bottom: var(--bt-sp-1);
+}
+
+.bt-sidebar__group-label {
+  font-size: var(--bt-text-sm);
+  font-weight: 600;
+  color: var(--bt-text-muted);
+  padding-left: var(--bt-sp-4);
+  margin-bottom: var(--bt-sp-2);
+  text-transform: uppercase;
+}
+
+a.nav-link {
+  display: block;
+}
+
+.nav-link.active {
+  background-color: var(--bt-gray-50);
+}
+
+a.nav-link i {
+  transform: translateY(-0.02em);
+  padding-right: var(--bt-sp-1);
+}
+
 .bt-sidebar--slim {
   width: var(--u-nav-sidebar-width-slim);
-  padding: var(--bt-sp-4) var(--bt-sp-2) var(--bt-sp-4) var(--bt-sp-1);
+  padding: var(--bt-sp-4) var(--bt-sp-2) var(--bt-sp-4) var(--bt-sp-4);
   overflow: visible;
+}
+.bt-sidebar--slim.bt-sidebar--flush {
+  padding-left: 0;
+  padding-right: 0;
 }
 .bt-sidebar--slim .bt-sidebar__group-label,
 .bt-sidebar--slim .bt-sidebar__label,
@@ -2466,6 +2514,11 @@ img.bt-navbar__logo {
 }
 .bt-sidebar--slim .bt-sidebar__toggle .if {
   rotate: 180deg;
+}
+.bt-sidebar--slim .bt-sidebar__toggle {
+  text-align: center;
+  margin-right: 0;
+  margin-bottom: var(--bt-sp-2);
 }
 
 /* ── Misc ─────────────────────────────────────────────────────────────────────── */
