--- a/assets/scss/foundation/_bootstrap-overrides.scss
+++ b/assets/scss/foundation/_bootstrap-overrides.scss
@@ -91,3 +91,9 @@
   --bs-pagination-disabled-bg:           var(--s-bg, var(--bt-white));
   --bs-pagination-disabled-border-color: var(--bt-gray-150);
 }
+
+.nav {
+  --bs-nav-link-color: var(--bt-blue-800);
+  --bs-nav-link-hover-color: var(--bt-blue-700);
+  --bs-nav-padding-x: var(--bt-sp-1) !important;
+}
